5. 个人主页与用户头像

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
