--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
 Pygments==2.2.0
+PyJWT==1.6.4
 python-dateutil==2.7.5
 python-dotenv==0.9.1
 python-editor==1.0.3
