--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,7 +2,7 @@
   "name": "front-end",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "ptrychen@gmail.com <1238023binbin>",
+  "author": "WY-Acer <wangy8961@163.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,14 +10,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "moment": "^2.24.0",
-    "popper.js": "^1.16.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "popper.js": "^1.14.4",
     "vue": "^2.5.2",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
-    "vue-toasted": "^1.1.28"
+    "vue-sweetalert2": "^1.5.7",
+    "vue-toasted": "^1.1.25"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
